Started implementing toggling task completion and adding new projects

--- a/src/template.html
+++ b/src/template.html
@@ -8,5 +8,8 @@
 <body>
     <div id="headerDiv"></div>
     <div id="projectsDiv"></div>
+    <div id="newProjButton">
+        <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
+    </div>
 </body>
 </html>
