--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,7 @@
     <div id="headerDiv"></div>
     <div id="projectsDiv"></div>
     <div id="newProjButton">
+        <h2>NEED A NEW PROJECT?</h2>
         <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
     </div>
 </body>
