--- a/src/template.html
+++ b/src/template.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
 </head>
+
 <body>
     <div id="headerDiv"></div>
     <div id="projectsDiv"></div>
+    <div id="newTaskButton">
+        <h2>NEED A NEW TASK?</h2>
+        <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
+        <dialog id="newTaskDialog">
+            <form action="" method="dialog" class="hidden">
+                <label for="title">Task:</label>
+                <input type="text" id="title" name="title" placeholder="Walk the dog" autofocus>
+                <br>
+                <label for="dueDate">Due date:</label>
+                <input type="text" id="dueDate" name="dueDate" placeholder="Jan 1, 2027">
+                <br>
+                <label for="priority">Priority:</label>
+                <select id="priority" name="priority">
+                    <option value="low">Low</option>
+                    <option value="normal">Normal</option>
+                    <option value="high">High</option>
+                </select>
+                <br>
+                <label for="description">Task description:</label>
+                <input type="text" id="description" name="description" placeholder="The dog needs walking!">
+                <br>
+                <label for="projectSelect">Assign to project:</label>
+                <select id="projectSelect" name="projectSelect">
+                </select>
+                <br>
+                <button id="submitTaskButton">Submit</button>
+            </form>
+        </dialog>
+    </div>
     <div id="newProjButton">
         <h2>NEED A NEW PROJECT?</h2>
         <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
     </div>
 </body>
+
 </html>
