--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,7 @@
         <h2>NEED A NEW PROJECT?</h2>
         <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
     </div>
+    <footer><a target="_blank" href="https://icons8.com/icon/26139/down-button">Down Button</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></footer>
 </body>
 
 </html>
