--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,7 @@
                 <input type="text" id="title" name="title" placeholder="Walk the dog" autofocus>
                 <br>
                 <label for="dueDate">Due date:</label>
-                <input type="text" id="dueDate" name="dueDate" placeholder="Jan 1, 2027">
+                <input type="date" id="dueDate" name="dueDate">
                 <br>
                 <label for="priority">Priority:</label>
                 <select id="priority" name="priority">
