--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     <div id="projectsDiv"></div>
     <div id="newTaskButton">
         <h2>NEED A NEW TASK?</h2>
-        <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
+        <img class="plusButton" src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
         <dialog id="newTaskDialog">
             <form action="" method="dialog" class="hidden">
                 <label for="title">Task:</label>
@@ -41,7 +41,7 @@
     </div>
     <div id="newProjButton">
         <h2>NEED A NEW PROJECT?</h2>
-        <img src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
+        <img class="plusButton" src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
     </div>
     <footer><a target="_blank" href="https://icons8.com/icon/26139/down-button">Down Button</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></footer>
 </body>
