--- a/src/template.html
+++ b/src/template.html
@@ -8,42 +8,51 @@
 </head>
 
 <body>
-    <div id="headerDiv"></div>
-    <div id="projectsDiv"></div>
-    <div id="newTaskButton">
-        <h2>NEED A NEW TASK?</h2>
-        <img class="plusButton" src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
-        <dialog id="newTaskDialog">
-            <form action="" method="dialog" class="hidden">
-                <label for="title">Task:</label>
-                <input type="text" id="title" name="title" placeholder="Walk the dog" autofocus>
-                <br>
-                <label for="dueDate">Due date:</label>
-                <input type="date" id="dueDate" name="dueDate">
-                <br>
-                <label for="priority">Priority:</label>
-                <select id="priority" name="priority">
-                    <option value="low">Low</option>
-                    <option value="normal">Normal</option>
-                    <option value="high">High</option>
-                </select>
-                <br>
-                <label for="description">Task description:</label>
-                <input type="text" id="description" name="description" placeholder="The dog needs walking!">
-                <br>
-                <label for="projectSelect">Assign to project:</label>
-                <select id="projectSelect" name="projectSelect">
-                </select>
-                <br>
-                <button id="submitTaskButton">Submit</button>
-            </form>
-        </dialog>
+    <div id="content">
+        <div id="appName">yet another todo list!</div>
+        <div id="headerDiv"></div>
+        <div id="projectsDiv"></div>
+        <div id="newTask">
+            <h2>NEED A NEW TASK?</h2>
+            <img id="newTaskButton" class="plusButton" src="./img/plus-box-outline.svg"
+                alt="Image of a plus symbol inside of a square">
+            <dialog id="newTaskDialog">
+                <form action="" method="dialog" class="hidden">
+                    <label for="title">Task:</label>
+                    <input type="text" id="title" name="title" placeholder="Walk the dog" autofocus>
+                    <br>
+                    <label for="dueDate">Due date:</label>
+                    <input type="date" id="dueDate" name="dueDate">
+                    <br>
+                    <label for="priority">Priority:</label>
+                    <select id="priority" name="priority">
+                        <option value="low">Low</option>
+                        <option value="normal">Normal</option>
+                        <option value="high">High</option>
+                    </select>
+                    <br>
+                    <label for="description">Task description:</label>
+                    <input type="text" id="description" name="description" placeholder="The dog needs walking!">
+                    <br>
+                    <label for="projectSelect">Assign to project:</label>
+                    <select id="projectSelect" name="projectSelect">
+                    </select>
+                    <br>
+                    <button id="submitTaskButton">Submit</button>
+                </form>
+            </dialog>
+        </div>
+        <div id="newProj">
+            <h2>NEED A NEW PROJECT?</h2>
+            <img id="newProjButton" class="plusButton" src="./img/plus-box-outline.svg"
+                alt="Image of a plus symbol inside of a square">
+        </div>
     </div>
-    <div id="newProjButton">
-        <h2>NEED A NEW PROJECT?</h2>
-        <img class="plusButton" src="./img/plus-box-outline.svg" alt="Image of a plus symbol inside of a square">
-    </div>
-    <footer><a target="_blank" href="https://icons8.com/icon/26139/down-button">Down Button</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></footer>
+    <footer>
+        <p>Coded by Hunter Haller, 2026</p>
+        <a target="_blank" href="https://icons8.com/icon/26139/down-button">Down Button</a> icon by <a target="_blank"
+            href="https://icons8.com">Icons8</a>
+    </footer>
 </body>
 
 </html>
